# signal-bus

./: Doxyfile.in  INSTALL  Makefile.am  README.md  autogen.sh  configure.ac
.github/workflows/: ccpp.yml
pkgconfig/: signalbus-uninstalled.pc.in  signalbus.pc.in
src/: Makefile.am  closure.c  continuation.c  continuation_pthread.c
src/build_assert/: build_assert.h  build_assert_is_variable.h
src/continuation/: Makefile.am  closure.h  closure_base.h  compiler_unknown.h  continuation.h  continuation_base.h  continuation_config.h  continuation_pthread.h  select_compiler_config.h
src/continuation/compiler/: armcc.h  gcc.h  msvc.h  unknown.h
src/continuation/misc/: continuation_alloca.h  continuation_inline.h  no_omit_frame_pointer.h  vector.h
src/preprocessor/: is_begin_parens.h  is_empty.h  is_null.h  is_sequence.h  is_void_cast.h  remove_begin_parens.h  remove_parens.h  variadic_size_or_zero.h
src/static_assert/: static_assert.h
tests/: Makefile.am  test_closure.c
