SUBDIRS = src tests

ACLOCAL_AMFLAGS = -I m4

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = pkgconfig/signalbus.pc
noinst_DATA = pkgconfig/signalbus-uninstalled.pc

EXTRA_DIST=\
 AUTHORS   \
 ChangeLog \
 COPYING   \
 INSTALL   \
 NEWS      \
 README    \
 README.md \
 autogen.sh \
 m4

#distclean-local:
